--- a/index.html
+++ b/index.html
@@ -54,42 +54,12 @@
       <div class="container">
         <!-- COMPUTER-FIELD -->
         <div class="computer-field">
-          <div class="row">
-            <div class="col-4">
-              <div class="reverse-card card animated">
-                <div class="reverse-card-img">
-                  <img
-                    src="./assets/img/card-reverse.png"
-                    class="img-fluid"
-                    alt="reverse card"
-                  />
-                </div>
-              </div>
-            </div>
+          <div class="d-flex justify-content-center">
+            <div class="carta_player card-pok card-back"></div>
 
-            <div class="col-4">
-              <div class="reverse-card card animated">
-                <div class="reverse-card-img">
-                  <img
-                    src="./assets/img/card-reverse.png"
-                    class="img-fluid"
-                    alt="reverse card"
-                  />
-                </div>
-              </div>
-            </div>
+            <div class="carta_player card-pok card-back"></div>
 
-            <div class="col-4">
-              <div class="reverse-card card animated">
-                <div class="reverse-card-img">
-                  <img
-                    src="./assets/img/card-reverse.png"
-                    class="img-fluid"
-                    alt="reverse card"
-                  />
-                </div>
-              </div>
-            </div>
+            <div class="carta_player card-pok card-back"></div>
           </div>
         </div>
 
@@ -97,48 +67,47 @@
 
         <!-- BATTLE-CARDS -->
         <div class="battle-cards">
-          <div class="row justify-content-center">
-            <div class="col-4">
-              <div class="carta_player pokemon-card" id="crd_fight_bg_1">
-                <div class="face front">
-                  <div class="pokemon-name-hp">
-                    <span class="pokemon-name" id="crd_fight_name_1"
-                      ></span
-                    >
-                    <span class="pokemon-id" id="crd_fight_id_1"></span>
-                  </div>
-                  <div class="imageContainer">
-                    <img
-                      id="crd_fight_img_1" style="width: 120px"
-                    />
-                  </div>
-                  <div class="pokemon-type-id">
-                    <span class="pokemon-hp" id="crd_fight_stats_1"></span>
-                    <span class="pokemon-type" id="crd_fight_type_1"></span>
-                  </div>
+          <div class="d-flex justify-content-center">
+            <div class="carta_player pokemon-card card-pok">
+              <div class="face front">
+                <div class="pokemon-name-hp">
+                  <span class="pokemon-name" id="crd_fight_name_1"
+                    >Charizard</span
+                  >
+                  <span class="pokemon-id" id="crd_fight_id_1">8</span>
+                </div>
+                <div class="imageContainer">
+                  <img
+                    id="crd_fight_img_1"
+                    src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png"
+                    style="width: 120px"
+                  />
+                </div>
+                <div class="pokemon-type-id">
+                  <span class="pokemon-hp" id="crd_fight_stats_1">120</span>
+                  <span class="pokemon-type" id="crd_fight_type_1">Fire</span>
                 </div>
               </div>
             </div>
 
-            <div class="col-4">
-              <div class="carta_player pokemon-card" id="crd_fight_bg_2">
-                <div class="face front">
-                  <div class="pokemon-name-hp">
-                    <span class="pokemon-name" id="crd_fight_name_2"
-                      ></span
-                    >
-                    <span class="pokemon-id" id="crd_fight_id_2"></span>
-                  </div>
-                  <div class="imageContainer">
-                    <img
-                      id="crd_fight_img_2"
-                      style="width: 120px"
-                    />
-                  </div>
-                  <div class="pokemon-type-id">
-                    <span class="pokemon-hp" id="crd_fight_stats_2"></span>
-                    <span class="pokemon-type" id="crd_fight_type_2"></span>
-                  </div>
+            <div class="carta_player pokemon-card card-pok">
+              <div class="face front">
+                <div class="pokemon-name-hp">
+                  <span class="pokemon-name" id="crd_fight_name_2"
+                    >Charizard</span
+                  >
+                  <span class="pokemon-id" id="crd_fight_id_2">8</span>
+                </div>
+                <div class="imageContainer">
+                  <img
+                    id="crd_fight_img_2"
+                    src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png"
+                    style="width: 120px"
+                  />
+                </div>
+                <div class="pokemon-type-id">
+                  <span class="pokemon-hp" id="crd_fight_stats_2">120</span>
+                  <span class="pokemon-type" id="crd_fight_type_2">Fire</span>
                 </div>
               </div>
             </div>
@@ -149,75 +118,68 @@
 
         <!-- USER-FIELD -->
         <div class="user-field">
-          <div class="row">
-            <div class="col-4">
-              <div class="carta_player pokemon-card" id="crd_plyr_bg_1">
-                <div class="face front">
-                  <div class="pokemon-name-hp">
-                    <span class="pokemon-name" id="crd_plyr_name_1"
-                      >Charizard</span
-                    >
-                    <span class="pokemon-id" id="crd_plyr_id_1">8</span>
-                  </div>
-                  <div class="imageContainer">
-                    <img
-                      id="crd_plyr_img_1"
-                      src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png"
-                      style="width: 120px"
-                    />
-                  </div>
-                  <div class="pokemon-type-id">
-                    <span class="pokemon-hp" id="crd_plyr_stats_1">120</span>
-                    <span class="pokemon-type" id="crd_plyr_type_1">Fire</span>
-                  </div>
+          <div class="d-flex justify-content-center">
+            <div class="carta_player pokemon-card card-pok">
+              <div class="face front">
+                <div class="pokemon-name-hp">
+                  <span class="pokemon-name" id="crd_plyr_name_1"
+                    >Charizard</span
+                  >
+                  <span class="pokemon-id" id="crd_plyr_id_1">8</span>
                 </div>
-              </div>
-            </div>
-
-            <div class="col-4">
-              <div class="carta_player pokemon-card" id="crd_plyr_bg_2">
-                <div class="face front">
-                  <div class="pokemon-name-hp">
-                    <span class="pokemon-name" id="crd_plyr_name_2"
-                      >Charizard</span
-                    >
-                    <span class="pokemon-id" id="crd_plyr_id_2">8</span>
-                  </div>
-                  <div class="imageContainer">
-                    <img
-                    id="crd_plyr_img_2"
-                      src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png"
-                      style="width: 120px"
-                    />
-                  </div>
-                  <div class="pokemon-type-id">
-                    <span class="pokemon-hp" id="crd_plyr_stats_2">120</span>
-                    <span class="pokemon-type" id="crd_plyr_type_2">Fire</span>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-4">
-              <div class="carta_player pokemon-card" id="crd_plyr_bg_3">
-                <div class="face front">
-                  <div class="pokemon-name-hp">
-                    <span class="pokemon-name" id="crd_plyr_name_3"
-                      >Charizard</span
-                    >
-                    <span class="pokemon-id" id="crd_plyr_id_3">8</span>
-                  </div>
-                  <div class="imageContainer">
-                    <img
+                <div class="imageContainer">
+                  <img
                     id="crd_plyr_img_3"
-                      src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png"
-                      style="width: 120px"
-                    />
-                  </div>
-                  <div class="pokemon-type-id">
-                    <span class="pokemon-hp" id="crd_plyr_stats_3">120</span>
-                    <span class="pokemon-type" id="crd_plyr_type_3">Fire</span>
-                  </div>
+                    src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png"
+                    style="width: 120px"
+                  />
+                </div>
+                <div class="pokemon-type-id">
+                  <span class="pokemon-hp" id="crd_plyr_stats_1">120</span>
+                  <span class="pokemon-type" id="crd_plyr_type_1">Fire</span>
+                </div>
+              </div>
+            </div>
+
+            <div class="carta_player pokemon-card card-pok">
+              <div class="face front">
+                <div class="pokemon-name-hp">
+                  <span class="pokemon-name" id="crd_plyr_name_2"
+                    >Charizard</span
+                  >
+                  <span class="pokemon-id" id="crd_plyr_id_2">8</span>
+                </div>
+                <div class="imageContainer">
+                  <img
+                    src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png"
+                    style="width: 120px"
+                  />
+                </div>
+                <div class="pokemon-type-id">
+                  <span class="pokemon-hp" id="crd_plyr_stats_2">120</span>
+                  <span class="pokemon-type" id="crd_plyr_type_2">Fire</span>
+                </div>
+              </div>
+            </div>
+
+            <!-- NEW CARD -->
+            <div class="carta_player pokemon-card card-pok">
+              <div class="face front">
+                <div class="pokemon-name-hp">
+                  <span class="pokemon-name" id="crd_plyr_name_3"
+                    >Charizard</span
+                  >
+                  <span class="pokemon-id" id="crd_plyr_id_3">8</span>
+                </div>
+                <div class="imageContainer">
+                  <img
+                    src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png"
+                    style="width: 120px"
+                  />
+                </div>
+                <div class="pokemon-type-id">
+                  <span class="pokemon-hp" id="crd_plyr_stats_3">120</span>
+                  <span class="pokemon-type" id="crd_plyr_type_3">Fire</span>
                 </div>
               </div>
             </div>
