--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <!-- BATTLE-CARDS -->
         <div class="battle-cards">
           <div class="d-flex justify-content-center">
-            <div class="carta_player pokemon-card card-pok">
+            <div class="carta_player pokemon-card card-pok" id="crd_fight_bg_1">
               <div class="face front">
                 <div class="pokemon-name-hp">
                   <span class="pokemon-name" id="crd_fight_name_1"
@@ -90,7 +90,7 @@
               </div>
             </div>
 
-            <div class="carta_player pokemon-card card-pok">
+            <div class="carta_player pokemon-card card-pok" id="crd_fight_bg_2">
               <div class="face front">
                 <div class="pokemon-name-hp">
                   <span class="pokemon-name" id="crd_fight_name_2"
@@ -119,7 +119,7 @@
         <!-- USER-FIELD -->
         <div class="user-field">
           <div class="d-flex justify-content-center">
-            <div class="carta_player pokemon-card card-pok">
+            <div class="carta_player pokemon-card card-pok" id="crd_plyr_bg_1">
               <div class="face front">
                 <div class="pokemon-name-hp">
                   <span class="pokemon-name" id="crd_plyr_name_1"
@@ -129,8 +129,7 @@
                 </div>
                 <div class="imageContainer">
                   <img
-                    id="crd_plyr_img_3"
-                    src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png"
+                    id="crd_plyr_img_1"
                     style="width: 120px"
                   />
                 </div>
@@ -141,7 +140,7 @@
               </div>
             </div>
 
-            <div class="carta_player pokemon-card card-pok">
+            <div class="carta_player pokemon-card card-pok" id="crd_plyr_bg_2">
               <div class="face front">
                 <div class="pokemon-name-hp">
                   <span class="pokemon-name" id="crd_plyr_name_2"
@@ -151,7 +150,7 @@
                 </div>
                 <div class="imageContainer">
                   <img
-                    src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png"
+                    id="crd_plyr_img_2"
                     style="width: 120px"
                   />
                 </div>
@@ -162,8 +161,7 @@
               </div>
             </div>
 
-            <!-- NEW CARD -->
-            <div class="carta_player pokemon-card card-pok">
+            <div class="carta_player pokemon-card card-pok" id="crd_plyr_bg_3">
               <div class="face front">
                 <div class="pokemon-name-hp">
                   <span class="pokemon-name" id="crd_plyr_name_3"
@@ -173,6 +171,7 @@
                 </div>
                 <div class="imageContainer">
                   <img
+                  id="crd_plyr_img_3"
                     src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png"
                     style="width: 120px"
                   />
