--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <form id="form" method="POST">
           <!-- name input-->
           <label for="name">Nombre</label>
-          <input type="text" name="name" id="name" class="input-field" />
+          <input type="text" name="name" id="input_name" class="input-field" />
 
           <!-- submit input-->
           <input
