--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <div class="container">
         <!-- COMPUTER-FIELD -->
         <div class="computer-field">
-          <div class="d-flex justify-content-center" id="div_cards_pc">
+          <div class="d-flex justify-content-evenly" id="div_cards_pc">
             <div
               class="carta_player card-pok card-back card_pc"
               id="crd_pc_1"
@@ -137,7 +137,7 @@
 
         <!-- USER-FIELD -->
         <div class="user-field">
-          <div class="d-flex justify-content-center">
+          <div class="d-flex justify-content-evenly">
             <div class="carta_player pokemon-card card-pok" id="crd_plyr_bg_1">
               <div class="face front">
                 <div class="pokemon-name-hp">
