--- a/index.html
+++ b/index.html
@@ -215,50 +215,21 @@
       </div>
     </div>
 
-    <button class="btn btn-primary" type="button" id="triggerResults">
-      trigger Results
-    </button>
 
-    <button class="btn btn-primary" type="button" id="triggerthrow">
-      trigger Throw
-    </button>
 
-    <button class="btn btn-primary" type="button" id="triggerBattle">
-      trigger Battle
-    </button>
-    <div class="container">
-      <div class="results d-none" id="results">
-        <table class="table table-primary">
-          <thead>
-            <tr>
-              <th scope="col">#</th>
-              <th scope="col">Nombre</th>
-              <th scope="col">Victorias</th>
-              <th scope="col">Derrotas</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <th scope="row">1</th>
-              <td>Mark</td>
-              <td>Otto</td>
-              <td>@mdo</td>
-            </tr>
-            <tr>
-              <th scope="row">2</th>
-              <td>Jacob</td>
-              <td>Thornton</td>
-              <td>@fat</td>
-            </tr>
-            <tr>
-              <th scope="row">3</th>
-              <td colspan="2">Larry the Bird</td>
-              <td>@twitter</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-    </div>
+    <table class="table container d-none" id="tabla-resutlados">
+      <thead>
+        <tr>
+          <th scope="col">Nombre</th>
+          <th scope="col">Victorias</th>
+          <th scope="col">Derrotas</th>
+        </tr>
+      </thead>
+      <tbody id="results">
+
+      </tbody>
+    </table>
+
 
     <!-- JS Propio -->
     <script src="./js/pokemon-fights.js"></script>
